# wikiviz

./: .gitignore  package-lock.json  package.json  setup.sh  tsconfig.json
backend/: env.ts  index.ts
backend/scrapy/: .gitignore  README.md  index.py  pyproject.toml  scrapy.cfg  setup.sh  test_index.py
backend/scrapy/scripts/: get_requirements_size.sh
backend/scrapy/webvis/: items.py  middlewares.py  pipelines.py  process.py  settings.py
backend/scrapy/webvis/spiders/: test_wikipedia.py  wikipedia.py
backend/scrapy/webvis/utils/: create_missing_folders.py
backend/scrapy/webvis/utils/crawling/: path_filter.py  wikipedia_path_filter.py
backend/scrapy/webvis/utils/network/: exporter.py  node_resizer.py  pipeline.py  serializer.py
backend/scrapy/wikivis/: pipelines.py  process.py  settings.py
backend/scrapy/wikivis/spiders/: wikipedia.py
backend/scrapy/wikivis/utils/crawling/: wikipedia_path_filter.py
backend/scrapy/wikivis/utils/network/: clusterizer.py  exporter.py  pipeline.py  serializer.py
backend/scrapy/wikivis/utils/parsing/: wikipedia_parser.py
backend/scrapy/wikiviz/: items.py  pipelines.py  process.py  settings.py
backend/scrapy/wikiviz/spiders/: wikipedia.py
backend/scrapy/wikiviz/utils/: env.py  get_run_name.py
backend/scrapy/wikiviz/utils/crawling/: path_filter.py  path_sampler.py  wikipedia_path_filter.py
backend/scrapy/wikiviz/utils/network/: clusterizer.py  exporter.py  node_resizer.py  pipeline.py  s3_saver.py  serializer.py
backend/scrapy/wikiviz/utils/parsing/: wikipedia_parser.py
development-notes/: architecture.drawio  (+1 more)
(+76 files in other folders)
